# sqlalchemy2-datatables

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml  tests.yml
datatables/: __init__.py  base.py  datatable.py
src/datatables/: __init__.py  base.py  datatable.py
tests/: fixtures.py  models.py  test_datatable_callbacks.py  test_datatable_columns.py  test_datatable_order.py  test_datatable_pagination.py  test_datatable_search.py  test_dt_column.py  test_dt_column_order.py  test_dt_data_callbacks.py  test_dt_params.py
