[tool.poetry]
name = "sqlalchemy2-datatables"
description = "Python Sqlalchemy based serverside processing for jQuery datatables."
authors = ["R. Hannes Niedner <hniedner@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datatables"}]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
version = "0.3.0"

#dynamic = ["version"]

[project]
name = "sqlalchemy2-datatables"
description = "Python Sqlalchemy based serverside processing for jQuery datatables."
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/coding-doc/sqlalchemy2-datatables"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0rc2"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
hatchling = "^1.12.2"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = { extras = ["d"], version = "^22.12.0" }
coverage = {extras = ["toml"], version = "^7.0.5"}
isort = "^5.11.4"
mypy = "^0.991"
pyupgrade = "^3.3.1"
ruff = "^0.0.219"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "datatables/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["datatables"]

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "sqlalchemy"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true


[tool.black]
color = true
line-length = 120
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.ruff]
line-length = 120
extend-select = ['Q']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[isort]
line_length = 120
known_first_party = 'datatables'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known-third-party = []
